--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<html><body><h1>It works!</h1>
-<p>This is the default web page for this server.</p>
-<p>The web server software is running but no content has been added, yet.</p>
+<html><body><h1>Welcome to maxlab.polito.it!</h1>
+<p>This is the home page of server maxlab.polito.it.</p>
+
+<ul>
+<li><a href="gitweb/">Git Repositories</a></li>
+<li><a href="confluence/">Wiki</a></li>
+</ul>
 </body></html>
