Rearrange items order

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <p>This is the home page of server maxlab.polito.it.</p>
 
 <ul>
+<li><a href="confluence/">Wiki (Confluence)</a></li>
 <li><a href="gitweb/">Git Repositories</a></li>
-<li><a href="confluence/">Wiki</a></li>
 </ul>
 </body></html>
