Add link to LXCBENCH Project Page, Copyright

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <p>This is the home page of server maxlab.polito.it.</p>
 
 <ul>
-<li><a href="confluence/">Wiki (Confluence)</a></li>
-<li><a href="gitweb/">Git Repositories</a></li>
+<li><a href="http://projects.genivi.org/lxcbench/">LXCBENCH (GENIVI Incubation Project)</a></li>
+<li><a href="confluence/">MAXLAB Wiki (Confluence)</a></li>
+<li><a href="gitweb/">MAXLAB Git Repositories</a></li>
 </ul>
+
+Copyright (C) 2012-2013 <a href="http://www.polito.it/">Politecnico di Torino</a>
+
 </body></html>
