Add link to MAXLAB JIRA, refactor contents

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html><body><h1>Welcome to maxlab.polito.it!</h1>
-<p>This is the home page of server maxlab.polito.it.</p>
 
+<p>For information about the LXCBENCH project, how to access the codebase and the project mailing list,
+please refer to <a href="http://projects.genivi.org/lxcbench/">http://projects.genivi.org/lxcbench</a></p>
+
+The following resources are restricted to Politecnico di Torino - DAUIN:
 <ul>
-<li><a href="http://projects.genivi.org/lxcbench/">LXCBENCH (GENIVI Incubation Project)</a></li>
-<li><a href="confluence/">MAXLAB Wiki (Confluence)</a></li>
+<li><a href="confluence/">MAXLAB Confluence</a></li>
 <li><a href="gitweb/">MAXLAB Git Repositories</a></li>
+<li><a href="jira/">MAXLAB JIRA</a></li>
 </ul>
 
-Copyright (C) 2012-2013 <a href="http://www.polito.it/">Politecnico di Torino</a>
+Copyright (C) 2012-2013 <a href="http://www.dauin.polito.it/">Politecnico di Torino - DAUIN</a>
 
 </body></html>
