Add reference to build/

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ please refer to <a href="http://projects.genivi.org/lxcbench/">http://projects.g
 
 The following resources are restricted to Politecnico di Torino - DAUIN:
 <ul>
+<li><a href="build/">MAXLAB Build Area</a> (authentication required)</li>
 <li><a href="confluence/">MAXLAB Confluence</a></li>
 <li><a href="gitweb/">MAXLAB Git Repositories</a></li>
 <li><a href="jira/">MAXLAB JIRA</a></li>
