Small edits in text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>For information about the LXCBENCH project, how to access the codebase and the project mailing list,
 please refer to <a href="http://projects.genivi.org/lxcbench/">http://projects.genivi.org/lxcbench</a></p>
 
-The following resources are restricted to Politecnico di Torino - DAUIN:
+The usage of the following resources is restricted to Politecnico di Torino - DAUIN personnel:
 <ul>
 <li><a href="build/">MAXLAB Build Area</a> (authentication required)</li>
 <li><a href="confluence/">MAXLAB Confluence</a></li>
