Extend Copyright to 2015
That should fix https://github.com/gmacario/maxlab.polito.it/issues/2

Also comment link to MAXLAB Git Repositories

Signed-off-by: Gianpaolo Macario <gmacario@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ The usage of the following resources is restricted to Politecnico di Torino - DA
 <ul>
 <li><a href="build/">MAXLAB Build Area</a> (authentication required)</li>
 <li><a href="confluence/">MAXLAB Confluence</a></li>
-<li><a href="gitweb/">MAXLAB Git Repositories</a></li>
+<!-- <li><a href="gitweb/">MAXLAB Git Repositories</a></li> -->
 <li><a href="jira/">MAXLAB JIRA</a></li>
 </ul>
 
-Copyright (C) 2012-2014 <a href="http://www.dauin.polito.it/">Politecnico di Torino - DAUIN</a>
+Copyright (C) 2012-2015 <a href="http://www.dauin.polito.it/">Politecnico di Torino - DAUIN</a>
 
 </body></html>
